--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.1.0
 Date: 2012-06-25
 Author: Umesh R. Rosyara 
 Maintainer: Umesh R. Rosyara <rosyara@msu.edu> 
-Depends: R (>= 1.15.1), qtl, lattice, ggplot2, genetics, onemap, grid, agricolae, reshape, lme4, boot, plyr, pvclust 
+Depends: R (>= 1.15.1), qtl, lattice, ggplot2, onemap, grid, agricolae, reshape, lme4, boot, plyr, pvclust 
 Suggests: qtl, onemap, agricolae 
 Description: The package contains different functionalities relevant to analysis of data from both conventional and molecular plant breeding and genetics experiments.
 License: GPL (>= 2)
